--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Maury</title>
+        <title>Studio des Tonneliers</title>
     </head>
     <body ontouchstart="">
         <header>
-            <h1>Le Duplex des Tonneliers</h1>
+            <h1>Le Studio des Tonneliers</h1>
         </header>
         <section id="accueil">
             <ul id="list_lang"></ul>
